# container-source-policy

./: .coderabbit.yaml  .gitignore  .golangci.yaml  .goreleaser.yaml  .goreleaser.yml  .lefthook.yml  .rumdl.toml  .typos.toml  AGENTS.md  CLAUDE.md  Makefile  README.md  codecov.yml  go.mod  go.sum  lefthook.yml  main.go  renovate.json
.claude/: settings.json
.github/workflows/: ci.yaml  release.yaml  release.yml
.serena/: project.yml
.serena/memories/: architecture.md  project-overview.md  shell-commands.md
cmd/container-source-policy/cmd/: pin.go  root.go  version.go
httpchecksum/: README.md  client.go  client_test.go
internal/dockerfile/: parser.go  parser_test.go
internal/ecrpublic/: mapper.go  mapper_test.go
internal/git/: client.go  client_test.go
internal/http/: client.go  client_test.go
internal/integration/: integration_test.go
internal/integration/__snapshots__/: TestPinHTTPSourcesVolatileContent_1.snap.json  TestPin_copy-from_1.snap.json  TestPin_git-add_1.snap.json  TestPin_http-add_1.snap.json  TestPin_multistage_1.snap.json  TestPin_onbuild_1.snap.json  TestPin_prefer-ecr-public-ghcr_1.snap.json  (+7 more)
internal/mcr/: mapper.go  mapper_test.go
internal/pin/: pin.go
internal/policy/: types.go
internal/registry/: client.go
internal/testutil/: mockhttpserver.go  mockregistry.go
internal/version/: version.go
packaging/: README.md  pack.rb
packaging/pypi/: LICENSE  README.md  hatch_build.py  pyproject.toml
packaging/pypi/container_source_policy/: __init__.py  main.py
packaging/rubygems/: Gemfile  container-source-policy.gemspec
(+20 files in other folders)
