[project]
name = "container-source-policy"
version = "0.1.0"
description = "Generate Buildx container source policy file for a given Dockerfile"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Konstantin Vyatkin", email = "tino@vtkn.io" }]
requires-python = ">=3.14.2"
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/tinovyatkin/container-source-policy"

[project.scripts]
container-source-policy = "container_source_policy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["container_source_policy"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["container_source_policy/"]
